[gd_scene load_steps=30 format=3 uid="uid://d4biv87sinkk1"]

[ext_resource type="Texture2D" uid="uid://crihei8xree6" path="res://sprites/oneshooterduck.png" id="1_h3egq"]
[ext_resource type="Script" path="res://character.gd" id="1_tuy5w"]
[ext_resource type="Texture2D" uid="uid://bt7gen1ywbmv0" path="res://sprites/greendollduck/greendollduckanim1.png" id="3_kkjn7"]
[ext_resource type="Texture2D" uid="uid://b3lyid8ijgpjw" path="res://sprites/greendollduck/greendollduckanim2.png" id="4_jg13q"]
[ext_resource type="Texture2D" uid="uid://dxcjdfmmsemn7" path="res://sprites/greendollduck/greendollduckanim3.png" id="5_qs31f"]
[ext_resource type="Texture2D" uid="uid://57kfvi6iyp3r" path="res://sprites/greendollduck/greendollduckanim4.png" id="6_nuuec"]
[ext_resource type="Texture2D" uid="uid://b64orey8uu1sp" path="res://sprites/greendollduck/greendollduckanim5.png" id="7_bst0u"]
[ext_resource type="Texture2D" uid="uid://by04h7knribec" path="res://sprites/greendollduck/greendollduckanim6.png" id="8_ys4f3"]
[ext_resource type="Texture2D" uid="uid://blxdyujmjv6qd" path="res://sprites/greendollduck/greendollduckanim7.png" id="9_xix08"]
[ext_resource type="Texture2D" uid="uid://cj8dobjixwsvc" path="res://sprites/Jedanims/Jedshoot/jedshoot7.png" id="17_fyui4"]
[ext_resource type="Texture2D" uid="uid://dgj3p3b3uecru" path="res://sprites/greendollrun/greendollrunanim1.png" id="17_l3mgd"]
[ext_resource type="Texture2D" uid="uid://dkrp1q110qxbh" path="res://sprites/greendollrun/greendollrunanim2.png" id="18_4l6ww"]
[ext_resource type="Texture2D" uid="uid://bqqr5dnrcoe3i" path="res://sprites/Jedanims/Jedshoot/jedshoot2.png" id="18_o8ocw"]
[ext_resource type="Texture2D" uid="uid://b7y75q4fwra8n" path="res://sprites/Jedanims/Jedshoot/jedshoot3.png" id="19_52d4k"]
[ext_resource type="Texture2D" uid="uid://cvxnnegy16pso" path="res://sprites/greendollrun/greendollrunanim3.png" id="19_nbfle"]
[ext_resource type="Texture2D" uid="uid://comrtaveamcq1" path="res://sprites/greendollrun/greendollrunanim4.png" id="20_w5ebi"]
[ext_resource type="Texture2D" uid="uid://dgx45i0qmgee4" path="res://sprites/Jedanims/Jedshoot/jedshoot4.png" id="20_x1ncu"]
[ext_resource type="Texture2D" uid="uid://13weqac66t3f" path="res://sprites/Jedanims/Jedshoot/jedshoot5.png" id="21_8cvkn"]
[ext_resource type="Texture2D" uid="uid://cfpd2y4tbfplq" path="res://sprites/greendollrun/greendollrunanim5.png" id="21_qt2pi"]
[ext_resource type="Texture2D" uid="uid://bpnnhtxvd46fp" path="res://sprites/greendollrun/greendollrunanim6.png" id="22_e4fwk"]
[ext_resource type="Texture2D" uid="uid://0eiemvrj772b" path="res://sprites/Jedanims/Jedshoot/jedshoot6.png" id="22_vaua4"]
[ext_resource type="Texture2D" uid="uid://bmxown86re62r" path="res://sprites/greendollrun/greendollrunanim7.png" id="23_0u4jw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qc853"]
size = Vector2(26.1, 34.2)

[sub_resource type="Animation" id="Animation_mbwjt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_h3egq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26.1, 34.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3.4, 10.3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Area2D/hit_box:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_qc853")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Area2D/hit_box:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4.66667, 9.66667)]
}

[sub_resource type="Animation" id="Animation_2324q"]
resource_name = "duck"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_kkjn7"), ExtResource("4_jg13q"), ExtResource("5_qs31f"), ExtResource("6_nuuec"), ExtResource("7_bst0u"), ExtResource("8_ys4f3"), ExtResource("9_xix08")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(26.1, 34.2), Vector2(26.1, 34.2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4.15, 10.1), Vector2(4.15, 10.1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Area2D/hit_box:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_qc853"), SubResource("RectangleShape2D_qc853")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Area2D/hit_box:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4.66667, 9.66667), Vector2(4.66667, 9.66667)]
}

[sub_resource type="Animation" id="Animation_1bj2w"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("17_l3mgd"), ExtResource("18_4l6ww"), ExtResource("19_nbfle"), ExtResource("20_w5ebi"), ExtResource("21_qt2pi"), ExtResource("22_e4fwk"), ExtResource("23_0u4jw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(25.6, 45), Vector2(25.6, 45)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-4.4, 5.6), Vector2(-4.4, 5.6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Area2D/hit_box:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3.33333, 5.66667), Vector2(-3.33333, 5.66667)]
}

[sub_resource type="Animation" id="Animation_avpbm"]
resource_name = "shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("17_fyui4"), ExtResource("18_o8ocw"), ExtResource("19_52d4k"), ExtResource("20_x1ncu"), ExtResource("21_8cvkn"), ExtResource("22_vaua4"), ExtResource("17_fyui4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(25.6, 45), Vector2(25.6, 45)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-4.4, 5.6), Vector2(-4.4, 5.6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Area2D/hit_box:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3.33333, 5.66667), Vector2(-3.33333, 5.66667)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w06a4"]
_data = {
"RESET": SubResource("Animation_mbwjt"),
"duck": SubResource("Animation_2324q"),
"run": SubResource("Animation_1bj2w"),
"shoot": SubResource("Animation_avpbm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3lwm"]
size = Vector2(214, 98.8333)

[node name="character" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_tuy5w")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_h3egq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_w06a4")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3.4, 10.3)
shape = SubResource("RectangleShape2D_qc853")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="Area2D" type="Area2D" parent="." groups=["character"]]
visible = false

[node name="hit_box" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4.66667, 9.66667)
shape = SubResource("RectangleShape2D_qc853")

[node name="shootingrange" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="range" type="CollisionShape2D" parent="shootingrange"]
position = Vector2(105, -21.25)
shape = SubResource("RectangleShape2D_c3lwm")

[node name="Swipe_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Node2d bullet measure position" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_exited" from="shootingrange" to="." method="_on_shootingrange_body_exited"]
[connection signal="timeout" from="Swipe_Timer" to="." method="_on_swipe_timer_timeout"]
